--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,4 +42,4 @@ jobs:
       - name: Coverage report to Codecov
         run: bash <(curl -s https://codecov.io/bash)
       - name: Analysing the code with pylint
-        run: pylint `ls -R|grep .py$|xargs`
+        run: pylint src
